Crash with multi-select / delete of the same object in Collection outliner #57831

Closed
opened 2018-11-14 17:56:52 +01:00 by Gavin Scott · 6 comments

System Information
Windows 10 current, Nvidia 1060 (laptop)

Blender Version
Broken: any recent build up to current commit as of submission.

Short description of error
Having an object in more than one collection allows you to multi-select that object more than once, resulting in unexpected selection behavior and will crash if you try to delete the object through a multi-selection (likely tries to delete it multiple times?)

Exact steps for others to reproduce the error
Start Blender with default scene.
In the Outliner, right click "Collection", select "Duplicate"
Click "Scene Collection", hit numpad "+" to expand both collections one level exposing Camera, Cube, and Lamp in each one.
Click on the word "Cube" in the fist collection. The cube becomes (remains) selected, and the outliner line gets a blue highlight.
Shift+Click on the word Cube in the second collection. The cube becomes deselected(!) and this outliner line gets a blue highlight in addition to the first Cube.
Right click either one of the two Cube items in the outliner and select "Delete".

Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF7EB6C2551
Module : G:\bdev\build_windows_Release_x64_vc15_Release\bin\Release\blender.exe

If you make additional copies of the Collection, the selection state of the Cube toggles each time you Shift+Click another Cube to add it to the outliner multi-selection. You can see the object highlight in the 3d view and the icon in the outliner indicate this.

If you have two copies of the collection (three total) and select the Cube in one, the Camera in another, and the Lamp in the third, then Delete works as expected and leaves you with three empty collections.

There is other weird behavior here, like undoing this delete can put it in a state where mousing over objects in the first two Collections causes a parallel highlight of the corresponding object in the other (first or second) Collection but not the third Collection. Changes to the active Collection go onto the undo stack (perhaps this is good and intended?). They don't cause crashes so I'll defer more details until beta.

**System Information** Windows 10 current, Nvidia 1060 (laptop) **Blender Version** Broken: any recent build up to current commit as of submission. **Short description of error** Having an object in more than one collection allows you to multi-select that object more than once, resulting in unexpected selection behavior and will crash if you try to delete the object through a multi-selection (likely tries to delete it multiple times?) **Exact steps for others to reproduce the error** Start Blender with default scene. In the Outliner, right click "Collection", select "Duplicate" Click "Scene Collection", hit numpad "+" to expand both collections one level exposing Camera, Cube, and Lamp in each one. Click on the word "Cube" in the fist collection. The cube becomes (remains) selected, and the outliner line gets a blue highlight. Shift+Click on the word Cube in the second collection. The cube becomes deselected(!) and this outliner line gets a blue highlight in addition to the first Cube. Right click either one of the two Cube items in the outliner and select "Delete". Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF7EB6C2551 Module : G:\bdev\build_windows_Release_x64_vc15_Release\bin\Release\blender.exe If you make additional copies of the Collection, the selection state of the Cube toggles each time you Shift+Click another Cube to add it to the outliner multi-selection. You can see the object highlight in the 3d view and the icon in the outliner indicate this. If you have two copies of the collection (three total) and select the Cube in one, the Camera in another, and the Lamp in the third, then Delete works as expected and leaves you with three empty collections. There is other weird behavior here, like undoing this delete can put it in a state where mousing over objects in the first two Collections causes a parallel highlight of the corresponding object in the other (first or second) Collection but not the third Collection. Changes to the active Collection go onto the undo stack (perhaps this is good and intended?). They don't cause crashes so I'll defer more details until beta.
Author

Added subscriber: @GavinScott

Added subscriber: @GavinScott
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Bastien Montagne was assigned by Philipp Oeser 2018-11-15 10:29:14 +01:00
Member

Regarding the crash:

yes, its going into object_delete_cb() twice.
Once with a valid object, second time without.
There was a special case for this introduced in the fix for #51625 (and changed again in f783efd127).

Not sure how this is supposed to work though, as code only goes into second branch if TreeStoreElem->id is NULL.
Later on it's pretty much garuanteed to hit the assert (TreeStoreElem->id is checked for NULL)

hitting assert here:
BLI_assert(te->idcode != 0 && id != NULL);

1   raise                                                     0x7ffff467053f 
2   abort                                                     0x7ffff465a95e 
3   id_delete                       outliner_edit.c      363  0x1d238a4      
4   id_delete_cb                    outliner_edit.c      391  0x1d239ed      
5   object_delete_cb                outliner_tools.c     468  0x1d2ad3b      
6   outliner_do_object_operation_ex outliner_tools.c     588  0x1d2b17f      
7   outliner_do_object_operation_ex outliner_tools.c     594  0x1d2b1fe      
8   outliner_do_object_operation_ex outliner_tools.c     594  0x1d2b1fe      
9   outliner_do_object_operation    outliner_tools.c     605  0x1d2b26b      
10  outliner_object_operation_exec  outliner_tools.c     983  0x1d2c06b

@mont29: mind having a look?

regarding the other reported issues (selection weirdness, ...): @GavinScott: I would prefer to open separate reports for this, OK (and maybe wait for beta)?

Regarding the crash: yes, its going into `object_delete_cb()` twice. Once with a valid object, second time without. There was a special case for this introduced in the fix for #51625 (and changed again in f783efd127). Not sure how this is supposed to work though, as code only goes into second branch **if** TreeStoreElem->id is NULL. Later on it's pretty much garuanteed to hit the assert (TreeStoreElem->id is checked for NULL) hitting assert here: `BLI_assert(te->idcode != 0 && id != NULL);` ``` 1 raise 0x7ffff467053f 2 abort 0x7ffff465a95e 3 id_delete outliner_edit.c 363 0x1d238a4 4 id_delete_cb outliner_edit.c 391 0x1d239ed 5 object_delete_cb outliner_tools.c 468 0x1d2ad3b 6 outliner_do_object_operation_ex outliner_tools.c 588 0x1d2b17f 7 outliner_do_object_operation_ex outliner_tools.c 594 0x1d2b1fe 8 outliner_do_object_operation_ex outliner_tools.c 594 0x1d2b1fe 9 outliner_do_object_operation outliner_tools.c 605 0x1d2b26b 10 outliner_object_operation_exec outliner_tools.c 983 0x1d2c06b ``` @mont29: mind having a look? regarding the other reported issues (selection weirdness, ...): @GavinScott: I would prefer to open separate reports for this, OK (and maybe wait for beta)?

@lichtwerk why do you keep assigning to me stuff on which I did not work? This is not related to #51625 nor f783efd127, the issue here is due to new 2.8 ability to put a same object in many collections (and hence have it selected several times in the outliner)…

Anyway, will check…

@lichtwerk why do you keep assigning to me stuff on which I did not work? This is not related to #51625 nor f783efd127, the issue here is due to new 2.8 ability to put a same object in many collections (and hence have it selected several times in the outliner)… Anyway, will check…

This issue was referenced by d2c41293a0

This issue was referenced by d2c41293a010e10bb5f79505686d663ec3bd11b3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57831
No description provided.